--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<a class="nav-link page-scroll" href="#header">INÍCIO <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link page-scroll" href="#preview">INSTITUCIONAL</a>
+					<a class="nav-link page-scroll" href="#preview">V&Iacute;DEOS</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link page-scroll" href="#features">PARCERIA</a>
@@ -80,25 +80,25 @@
 			</ul>
 			<span class="nav-item social-icons">
 				<span class="fa-stack">
-					<a href="https://pt-br.facebook.com/tudomilitar/">
+					<a target="_blank" href="https://pt-br.facebook.com/tudomilitar/">
 						<i class="fas fa-circle fa-stack-2x"></i>
 						<i class="fab fa-facebook-f fa-stack-1x"></i>
 					</a>
 				</span>
 				<span class="fa-stack">
-					<a href="https://instagram.com/tudomilitar/">
+					<a target="_blank" href="https://instagram.com/tudomilitar/">
 						<i class="fas fa-circle fa-stack-2x"></i>
 						<i class="fab fa-instagram fa-stack-1x"></i>
 					</a>
 				</span>
 				<span class="fa-stack">
-					<a href="https://twitter.com/tudomilitar/">
+					<a target="_blank" href="https://twitter.com/tudomilitar/">
 						<i class="fas fa-circle fa-stack-2x"></i>
 						<i class="fab fa-twitter fa-stack-1x"></i>
 					</a>
 				</span>
 				<span class="fa-stack">
-					<a href="https://www.youtube.com/channel/UC69zGZ_SK5AI4ffk_rmUdLA">
+					<a target="_blank" href="https://www.youtube.com/channel/UC69zGZ_SK5AI4ffk_rmUdLA">
 						<i class="fas fa-circle fa-stack-2x"></i>
 						<i class="fab fa-youtube fa-stack-1x"></i>
 					</a>
@@ -116,9 +116,9 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="text-container">
-							<h1>TUDO MILITAR <br>É <span id="js-rotating">INSPIRAÇÃO, ESTÍMULO, MOTIVAÇÃO, TUDO, REALIZAÇÃO</span></h1>
-							<p class="p-large">Estamos com uma camana de arrecadacao dde funds ara comrar alimento ara familiA CARENTES</p>
-							<a class="btn-solid-lg page-scroll" href="#your-link"><i class="fa fa-heart"></i> DOAR VIA BOLETO OU CARTÃO</a>
+							<h1>TUDO MILITAR <br>É <span id="js-rotating">INSPIRAÇÃO, ESTÍMULO, MOTIVAÇÃO, REALIZAÇÃO</span></h1>
+							<p class="p-large">N&atilde;o temos nenhuma renda com nossas p&aacute;ginas. Por isso, pedimos para que voc&ecirc; contribua com qualquer quantia, utilizando o bot&atilde;o abaixo, e nos ajude &agrave; permanecer online. POSTANDO CADA VEZ MAIS!</p>
+							<a class="btn-solid-lg page-scroll" target="_blank" href="https://picpay.me/obrunoelias"><i class="fa fa-heart"></i> DOAR VIA PICPAY</a>
 						</div>
 					</div> <!-- end of col -->
 					<div class="col-lg-6">
@@ -151,7 +151,7 @@
 						</div>
 						<div class="cell">
 							<div class="counter-value number-count" data-count="30">1</div>
-							<p class="counter-info">Seguidores no Perfil do Twitter</p>
+							<p class="counter-info">Seguidores no Twitter</p>
 						</div>
 						<div class="cell">
 							<div class="counter-value number-count" data-count="150">1</div>
@@ -171,8 +171,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2>PREVIEW</h2>
-					<div class="p-heading p-large">Target the right customers for your business with the help of Leno's patented segmentation technology</div>
+					<h2>TUDO MILITAR V&Iacute;DEOS</h2>
+					<div class="p-heading p-large">Veja aqui, o &uacute;ltimo v&iacute;deo do nosso <a href="https://www.youtube.com/channel/UC69zGZ_SK5AI4ffk_rmUdLA" target="_blank" rel="noopener">canal do YouTube</a>. L&aacute; n&oacute;s postamos curiosidades, not&iacute;cias, can&ccedil;&otilde;es e tiramos v&aacute;rias d&uacute;vidas relacionadas ao mundo militar.</div>
 				</div> <!-- end of col -->
 			</div> <!-- end of row -->
 			<div class="row">
@@ -181,8 +181,8 @@
 					<!-- Video Preview -->
 					<div class="image-container">
 						<div class="video-wrapper">
-							<a class="popup-youtube" href="https://www.youtube.com/watch?v=fLCjQJCekTs" data-effect="fadeIn">
-								<img class="img-fluid" src="images/video-frame.jpg" alt="alternative">
+							<a class="popup-youtube" href="https://www.youtube.com/watch?v=3eRRDFLpQjw" data-effect="fadeIn">
+								<img class="img-fluid" src="https://bityli.com/Bs6mX" alt="alternative">
 								<span class="video-play-button">
 									<span></span>
 								</span>
@@ -451,11 +451,11 @@
 						<ul class="list-unstyled li-space-lg">
 							<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Se torne <a class="turquoise" href="#your-link">Sargento do Exército Brasileiro</a></div>
+								<div class="media-body">Se torne <a class="turquoise" title="Acessar curso" href="https://go.hotmart.com/O36369028I" target="_blank" rel="noopener">Sargento do Ex&eacute;rcito Brasileiro</a></div>
 							</li>
 							<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Se torne <a class="turquoise" href="terms-conditions.html">Oficial do Exército Brasileiro</a></div>
+								<div class="media-body">Se torne <a class="turquoise" title="Acessar curso" href="https://go.hotmart.com/S26630348Q" target="_blank" rel="noopener">Oficial do Ex&eacute;rcito Brasileiro</a></div>
 							</li>
 						</ul>
 					</div>
@@ -464,25 +464,25 @@
 					<div class="footer-col last">
 						<h4>Mídias sociais</h4>
 						<span class="fa-stack">
-							<a href="https://pt-br.facebook.com/tudomilitar/">
+							<a target="_blank" href="https://pt-br.facebook.com/tudomilitar/">
 								<i class="fas fa-circle fa-stack-2x"></i>
 								<i class="fab fa-facebook-f fa-stack-1x"></i>
 							</a>
 						</span>
 						<span class="fa-stack">
-							<a href="https://instagram.com/tudomilitar/">
+							<a target="_blank" href="https://instagram.com/tudomilitar/">
 								<i class="fas fa-circle fa-stack-2x"></i>
 								<i class="fab fa-instagram fa-stack-1x"></i>
 							</a>
 						</span>
 						<span class="fa-stack">
-							<a href="https://twitter.com/tudomilitar/">
+							<a target="_blank" href="https://twitter.com/tudomilitar/">
 								<i class="fas fa-circle fa-stack-2x"></i>
 								<i class="fab fa-twitter fa-stack-1x"></i>
 							</a>
 						</span>
 						<span class="fa-stack">
-							<a href="https://www.youtube.com/channel/UC69zGZ_SK5AI4ffk_rmUdLA">
+							<a target="_blank" href="https://www.youtube.com/channel/UC69zGZ_SK5AI4ffk_rmUdLA">
 								<i class="fas fa-circle fa-stack-2x"></i>
 								<i class="fab fa-youtube fa-stack-1x"></i>
 							</a>
