--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -116,7 +116,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="text-container">
-							<h1>TUDO MILITAR <br>É <span id="js-rotating">INSPIRAÇÃO, ESTÍMULO, MOTIVAÇÃO, REALIZAÇÃO</span></h1>
+							<h1>TUDO MILITAR <br>É <span id="js-rotating">INSPIRAÇÃO, ESTÍMULO, APRENDIZADO, MOTIVAÇÃO, REALIZAÇÃO</span></h1>
 							<p class="p-large">N&atilde;o temos nenhuma renda com nossas p&aacute;ginas. Por isso, pedimos para que voc&ecirc; contribua com qualquer quantia, utilizando o bot&atilde;o abaixo, e nos ajude &agrave; permanecer online. POSTANDO CADA VEZ MAIS!</p>
 							<a class="btn-solid-lg page-scroll" target="_blank" href="https://picpay.me/obrunoelias"><i class="fa fa-heart"></i> DOAR VIA PICPAY</a>
 						</div>
